--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -8,9 +8,10 @@ ENV NODE_ENV development
 WORKDIR /usr/src/app
 
 # Copy over `package.json` and lock files to optimize the build process
-COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "yarn.lock", "./"]
+COPY ["pnpm-lock.yaml", "package.json", "./"]
 # Install Node modules
-RUN yarn
+RUN npm install -g pnpm
+RUN pnpm i
 
 # Copy over rest of the project files
 COPY . .
@@ -20,4 +21,4 @@ EXPOSE 3000
 EXPOSE 24678
 
 # Run `yarn dev` and set the host to 0.0.0.0 so we can access the web app from outside
-CMD ["yarn", "dev", "--host", "0.0.0.0"]
+CMD ["pnpm", "dev", "--host", "0.0.0.0"]
