--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -21,4 +21,4 @@ EXPOSE 3000
 EXPOSE 24678
 
 # Run `yarn dev` and set the host to 0.0.0.0 so we can access the web app from outside
-CMD ["pnpm", "dev", "--host", "0.0.0.0"]
+CMD ["pnpm", "run", "dev", "--host", "0.0.0.0"]
